# N-CMAPSS-Engine-Prediction

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  CLEANUP_REPORT.md  DEPLOYMENT.md  ENSEMBLE_GUIDE.md  EXPERIMENTS.md  FINAL_ANALYSIS_REPORT.md  GETTING_STARTED.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOSS_FUNCTIONS.md  MODEL_SELECTION.md  MSTCN_EXPLAINED.md  Makefile  N_CMAPSS.ipynb  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_PRODUCTION.md  TEST_RESULTS.md  TUNING_LOG.md  VISUALIZATIONS.md  demo_inference.py  example_usage.py  example_visualizations.py  main.py  predict.py  pyproject.toml  requirements.txt  run_sequential_training.sh  save_visualizations.py  setup_wandb.sh  train.py  train_model.py  train_production_model.py  transformer_large.json  visualize.py  visualize_data.py
.github/workflows/: ci.yml
docs/: MODEL_CHECKPOINTING.md
examples/: README.md  api_server.py
notebooks/: N_CMAPSS.ipynb
paper/: Makefile  main.tex  references.bib
scripts/: benchmark_apples_to_apples.py  benchmark_paper_ideas.py  benchmark_sota_models.py  compare_saved_runs.py  cross_dataset_validation.py  diagnostic_training.sh  example_visualizations.py  list_local_runs.py  make_best_model_summary.py  prepare_ensemble.py  run_quick_wins.sh  run_quick_wins_wandb.sh  run_review_response_experiments.py  sync_all_wandb_runs.py  test_wandb.py  tune_for_sota.py
src/data/: CLAUDE.md  (+4 more)
sweeps/: gru_quick_search.json
tests/: __init__.py  conftest.py  model_assertions.py  test_atcn.py  test_data_loading.py  test_hparam_search.py  test_interpretability.py  test_mamba_rul.py  test_metrics.py  test_models.py  test_mstcn.py  test_predict.py  test_sparse_transformer_bigrcu.py  test_star_transformer.py  test_training.py  test_uncertainty.py  test_visualization.py  test_zone_weights_and_inference.py
tuning_results/: hyperparams_mstcn_20260329_190916.json  hyperparams_mstcn_20260329_190916.md  issue25_recipe_20260315_184733.json  issue25_recipe_20260315_184733.md
(+91 files in other folders)
